[package]
name = "rsass"
version = "0.9.9-PRE"
authors = ["Rasmus Kaj <kaj@kth.se>"]
categories = ["command-line-utilities", "web-programming"]
keywords = ["scss", "sass", "css"]
description = "Early-stage sass implementation in pure rust"
documentation = "https://docs.rs/rsass"
repository = "https://github.com/kaj/rsass"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[[bin]]
name = "rsass"
doc = false
required-features = ["commandline"]

[[bin]]
name = "spectest"
path = "src/spectest/main.rs"
doc = false
required-features = ["spectest"]

[features]
commandline = ["clap"]
spectest = ["yaml-rust", "deunicode", "hrx-get", "regex"]

[dependencies]
bytecount = "0.5.0"
lazy_static = "1.0"
nom = { version = "4.2.0", features = ["verbose-errors"] }
num-rational = { version = "0.2.1", default-features = false }
num-traits = "^0.2.0"
rand = "0.6.1"
clap = { version = "^2.19", features = ["color", "wrap_help"], optional = true }
deunicode = { version = "1.0", optional = true }
hrx-get = { version = "0.1", optional = true }
regex = { version = "1.1.0", optional = true }
yaml-rust = { version = "0.4", optional = true }

[badges]
travis-ci = { repository = "kaj/rsass" }
appveyor = { repository = "kaj/rsass" }
maintenance = { status = "actively-developed" }
