[package]
name = "rsass"
version = "0.24.1-PRE"
authors = ["Rasmus Kaj <kaj@kth.se>"]
categories = ["command-line-utilities", "web-programming"]
keywords = ["scss", "sass", "css"]
description = "Sass implementation in pure rust (not complete yet)"
documentation = "https://docs.rs/rsass"
repository = "https://github.com/kaj/rsass"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[[bin]]
name = "rsass"
doc = false
required-features = ["commandline"]

[[bin]]
name = "spectest"
path = "src/spectest/main.rs"
doc = false
required-features = ["spectest"]

[features]
commandline = ["clap"]
spectest = ["yaml-rust", "deunicode", "hrx-get", "regex"]
unimplemented_args = []

[dependencies]
lazy_static = "1.0"
nom = { version = "7.0", default-features = false }
nom_locate = "4.0"
num-bigint = { version = "0.4.0", default-features = false, features = ["std"] }
num-integer = "0.1.42"
num-rational = { version = "0.4.0", default-features = false }
num-traits = "^0.2.0"
fastrand = "1.4"
clap = { version = "3.0.0", features = ["derive", "wrap_help"], optional = true }
deunicode = { version = "1.0", optional = true }
hrx-get = { version = "0.2.0", optional = true }
regex = { version = "1.1.0", optional = true }
tracing = "0.1.34"
yaml-rust = { version = "0.4", optional = true }

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
tracing-subscriber = "0.3.11"
