[package]
name = "rsass-cli"
version = "0.28.1-PRE"
authors = ["Rasmus Kaj <kaj@kth.se>"]
description = "Commandline interface for rsass, compiles scss to css."
categories = ["command-line-utilities", "web-programming"]
keywords = ["scss", "sass", "css", "web"]
repository = "https://github.com/kaj/rsass"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.70.0"

[[bin]]
name = "rsass"
path = "src/main.rs"

[features]
unimplemented_args = []

[dependencies]
rsass = { path = "../rsass" }
clap = { version = "4.1.1", features = ["derive", "wrap_help"] }
