[package]
name = "rsass-cli"
version = "0.28.11-PRE"
authors = ["Rasmus Kaj <kaj@kth.se>"]
description = "Commandline interface for rsass, compiles scss to css."
categories = ["command-line-utilities", "web-programming"]
keywords = ["scss", "sass", "css", "web"]
repository = "https://github.com/kaj/rsass"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74.0"

[[bin]]
name = "rsass"
path = "src/main.rs"

[features]
unimplemented_args = []

[dependencies]
rsass = { path = "../rsass", version = "0.28.10" }
clap = { version = "4.1.1", features = ["derive", "wrap_help"] }
