[package]
name = "rsass-cli"
version = "0.29.1-PRE"
authors = ["Rasmus Kaj <rasmus@krats.se>"]
description = "Commandline interface for rsass, compiles scss to css."
categories = ["command-line-utilities", "web-programming"]
keywords = ["scss", "sass", "css", "web"]
repository = "https://github.com/kaj/rsass"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.74.0"

[[bin]]
name = "rsass"
path = "src/main.rs"

[features]
unimplemented_args = []

[dependencies]
rsass = { path = "../rsass" }
clap = { version = "4.1.1", features = ["derive", "wrap_help"] }
