[package]
name = "rsass-macros"
version = "0.29.0"
authors = ["Rasmus Kaj <rasmus@krats.se>"]
categories = ["web-programming"]
keywords = ["scss", "sass", "css", "web", "macro"]
description = "Sass as a rust function-like macro."
documentation = "https://docs.rs/rsass-macros"
repository = "https://github.com/kaj/rsass"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65.0"

[lib]
proc-macro = true

[dependencies]
rsass = { path = "../rsass", version = "0.29.0" }
proc-macro2 = "1.0.32"
quote = "1.0.22"
syn = "2.0.2"
