[package]
name = "rsass"
version = "0.28.11-PRE"
authors = ["Rasmus Kaj <kaj@kth.se>"]
categories = ["web-programming"]
keywords = ["scss", "sass", "css", "web"]
description = "Sass implementation in pure rust (not complete yet)"
documentation = "https://docs.rs/rsass"
repository = "https://github.com/kaj/rsass"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.61.0"

[dependencies]
arc-swap = "1.5.0"
fastrand = "2.0"
lazy_static = "1.0"
nom = "7.0"
num-traits = "^0.2.0"
tracing = "0.1.34"

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
tracing-subscriber = "0.3.11"
