[package]
name = "rsass"
version = "0.29.0"
authors = ["Rasmus Kaj <rasmus@krats.se>"]
categories = ["web-programming"]
keywords = ["scss", "sass", "css", "web"]
description = "Sass implementation in pure rust (not complete yet)"
documentation = "https://docs.rs/rsass"
repository = "https://github.com/kaj/rsass"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65.0"

[dependencies]
arc-swap = "1.5.0"
fastrand = "2.0"
lazy_static = "1.0"
nom = "8.0"
nom-language = "0.1.0"
tracing = "0.1.34"

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
tracing-subscriber = "0.3.11"
