[package]
name = "spectest"
version = "0.26.1-PRE"
authors = ["Rasmus Kaj <kaj@kth.se>"]
description = "Converts sass-spec to rust tests."
edition = "2021"
rust-version = "1.56.0"

[dependencies]
rsass = { path = "../rsass" }
deunicode = "1.0"
hrx-get = "0.2.0"
lazy-regex = "2.3.0"
lazy_static = "1.0"
yaml-rust = "0.4"
