[package]
name = "spectest"
version = "0.29.1-PRE"
authors = ["Rasmus Kaj <rasmus@krats.se>"]
description = "Converts sass-spec to rust tests."
edition = "2021"
rust-version = "1.65.0"

[dependencies]
rsass = { path = "../rsass" }
deunicode = "1.0"
hrx-get = "0.2.0"
lazy-regex = "3.0.0"
lazy_static = "1.0"
yaml-rust = "0.4"
